moved the "switch to..." link left so it wasn't getting cut off. fixes #665

--- a/media/css/style.css
+++ b/media/css/style.css
@@ -103,7 +103,7 @@ table.main td.center .center-pad {
 #header .floating {
     display:block;
     position:absolute;
-    right:5px;
+    right:15px;
     top:15px;
     font-size:75%;
     color:gray;
